Added bidirectional POJO <> XML mapping for Plays